<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/tool_bar"/>
    <EditText
        android:id="@+id/reset_password_edit_mobile"
        android:layout_marginTop="@dimen/margin_top_30"
        style="@style/EditText"
        android:hint="@string/mobile"/>
    <EditText
        android:id="@+id/reset_password_edit_password"
        style="@style/EditText"
        android:hint="@string/password"/>
    <EditText
        android:id="@+id/reset_password_edit_newpass"
        style="@style/EditText"
        android:hint="@string/new_password"/>

    <Button
        android:id="@+id/reset_password_button_reset"
        style="@style/button"
        android:layout_marginTop="@dimen/margin_top_30"
        android:text="Reset"
        android:textAllCaps="false"/>

</LinearLayout>