<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/tool_bar"/>
    <ImageView
        android:id="@+id/detail_image_view"
        android:layout_width="match_parent"
        android:layout_below="@+id/tool_bar"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"/>
    <TextView
        android:id="@+id/detail_text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_image_view"
        android:layout_marginTop="@dimen/margin_top"
        android:textSize="@dimen/text_size_20dp"
        android:padding="@dimen/edit_text_padding"/>
    <TextView
        android:id="@+id/detail_text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_below="@+id/detail_text_name"
        android:padding="@dimen/edit_text_padding"/>
    <TextView
        android:id="@+id/detail_text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_below="@+id/detail_text_description"
        android:layout_alignParentRight="true"
        android:padding="10dp"
        android:textColor="@color/colorButton"
        android:text="100"
        android:textSize="@dimen/text_size_25"/>
    <LinearLayout
        android:layout_below="@+id/detail_text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_top">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qty"
            android:textSize="@dimen/text_size_20dp"/>
        <Spinner
            android:id="@+id/detail_activity_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detail_text_price">

        </Spinner>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_top">
        <Button
            android:id="@+id/detail_button_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_solid_background"
            android:text="@string/add_to_cart"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"/>
        <Button
            android:id="@+id/detail_button_buy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_stroke_background"
            android:textAllCaps="false"
            android:text="@string/buy_now"
            android:textColor="@color/colorButton"/>

    </LinearLayout>



</RelativeLayout>